src/test/run-pass/issue-3688-2.rs
// xfail-test
fn f(x:int) {
    const child: int = x + 1;
}

fn main() {}
